# ChomoCuLib

./: .gitignore  CMakeLists.txt  README.md
libTest/: CMakeLists.txt  main.cpp
libTest/include/: cudaCal.h
src/: cudaCal.cpp  cudaKernel.cu
